--- a/gb/24/12/21/n14395510.md
+++ b/gb/24/12/21/n14395510.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>日本允许英国和加拿大人续签打工度假签证</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/08/id14313656-GettyImages-1230838511-600x400.jpg" />
-<h6>日本对会说英语的滑雪教练的需求正在上升，相关行业一直呼吁政府扩大外国人的打工度假计划，以许续签此类签证。图为2021年1月28日，日本新雪谷町的滑雪场。(Carl Court/Getty Images)
-</h6>
+<h6>日本对会说英语的滑雪教练的需求正在上升，相关行业一直呼吁政府扩大外国人的打工度假计划，以许续签此类签证。图为2021年1月28日，日本新雪谷町的滑雪场。(Carl Court/Getty Images)</h6>
 <hr>
 	<p>【大纪元2024年12月22日讯】（大纪元记者林燕编译报导）周日（12月22日），《日经亚洲》报导说，日本将允许持打工度假签证的年轻外国人续签身份，邀请他们多待一段时间，并在日本热门旅游目的地工作。</p>
 <p>到目前为止，抵达日本的外国人只能获得一次短期打工度假签证。但很快，日本允许与英国和加拿大等五个国家续签这类签证。同时，日本计划到明年3月将有资格续签的国家和地区名单扩大到10个左右。</p>
@@ -13,34 +12,33 @@
 <p>根据互惠协议，英国和加拿大的留学生可以获得两次或连续两年的日本打工度假签证，反之亦然。</p>
 <p>由于日元贬值降低了生活和学习成本，打工度假计划在旅日的外国留学生中越来越受欢迎，尤其是在COVID疫情爆发之后。</p>
 <p>责任编辑：林妍#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14395099.md#1">英媒：中共统战部海外影响力活动 陷间谍疑云</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395199.md#1">CECC发布年度报告 促美制止中共活摘暴行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395200.md#1">内幕：中共特务陈军孙耀宁合谋渗透美政坛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395492.md#1">德国圣诞市场血案 警方新闻会揭更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/21/n9981424.md#1" target="_blank">林辉：中共治下红楼泪 谁解其中味？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/31/n9788075.md#1" target="_blank">你不了解的邓小平：反右运动总指挥（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392283.md#1">【未解之谜】最匪夷所思的实验 发现时间的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390885.md#1">传统冬至节俗吃什么  每一品都是中华文明之光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384433.md#1">中国的第五大发明 二十四节气知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388436.md#1">《潜伏》：富翁兼特工 变身深层政府吹哨人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14395069.md#1">【马克时空】2024商业航天发展快 星舰成功回收</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394543.md#1">【时事金扫描】遭到袭击 以军要斩首胡塞领袖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394956.md#1">【未解之谜】时间是神？验证“天上方一日 地上已千年”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394092.md#1">大陆多地“给树穿毛衣” 网民热议亡国之兆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393755.md#1">攻击性极强的日本虾为何震惊新西兰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393691.md#1">为拍《热辣滚烫》曾减百斤 贾玲承认体重反弹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394510.md#1">演唱会裤兜里装矿泉水 刀郎爆红原因引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393733.md#1">一件羽绒服已穿14年 孙俪获网友夸赞及调侃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394427.md#1">婚变传闻爆不停 吴奇隆刘诗诗关联公司已注销</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394050.md#1">寇特妮考克丝回归《惊声尖叫7》 明年初开拍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/20/n14394760.md#1">专家：在花园里撒肉桂粉 好处多多</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391154.md#1">鱼油吃对才有效? 这些人或增心房颤动风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14393944.md#1">切食物的方式会影响其口味吗？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390802.md#1">低盐无力低糖心慌 健康饮食要这样吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392879.md#1">揭秘：你与宇宙的隐形连结如何影响健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/12/21/n14395510.htm">日本允许英国和加拿大人续签打工度假签证</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395510.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
