--- a/gb/24/11/12/n14369263.md
+++ b/gb/24/11/12/n14369263.md
@@ -3,13 +3,12 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台韩日围棋第一人齐聚 三星杯首轮对阵出炉</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369323-asdfasdfsf.jpg" />
-<h6>2024年11月11日，第29届“三星杯世界围棋大师赛”在韩国京畿道高阳市三星研修院举行抽签仪式，图为首轮32强赛的对阵表。（韩国棋院提供）
-</h6>
+<h6>2024年11月11日，第29届“三星杯世界围棋大师赛”在韩国京畿道高阳市三星研修院举行抽签仪式，图为首轮32强赛的对阵表。（韩国棋院提供）</h6>
 <hr>
 	<p>【大纪元2024年11月12日讯】（大纪元记者叶诚允报导）第29届“三星杯世界围棋大师赛”开幕，台韩日三国围棋第一人许皓鋐九段、申真谞九段和一力辽九段齐聚韩国三星研修院。首轮抽签结果出炉，他们三人分别对阵中国大陆棋手许嘉阳九段、王星昊九段和连笑九段。</p>
 <p>本届“三星杯”是新冠疫情（Covid-19）以来首度恢复公开预选赛选拔模式，共争夺18个正赛名额。中国大陆棋手有11人晋级，成为最大赢家；韩、泰两国棋手分别有6人和1人闯关。</p>
 <p>这18名棋手与另外14名直接进入正赛的棋手组成本届赛事的32强。其中，中国大陆棋手恰好坐拥半壁江山，共有16人入围；韩国棋手占据12个席位；剩余4席被台、日、泰三国棋手瓜分。</p>
-<figure id="attachment_14369322" aria-describedby="caption-attachment-14369322" style="width: 559px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369322-adfdsfsaf0-1.jpg"><img decoding="async" class=" wp-image-14369322" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369322-adfdsfsaf0-1.jpg" alt="" width="559" b="371" /></a><figcaption id="caption-attachment-14369322" class="wp-caption-text">2024年11月11日， 32位世界顶尖棋手与韩国棋迷一同参加第29届“三星杯世界围棋大师赛”的抽签仪式。（韩国棋院提供）</figcaption></figure>
+<figure id="attachment_14369322" aria-describedby="caption-attachment-14369322" style="width: 559px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369322-adfdsfsaf0-1.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14369322" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369322-adfdsfsaf0-1.jpg" alt="" width="559" b="371"></a><figcaption id="caption-attachment-14369322" class="wp-caption-text">2024年11月11日， 32位世界顶尖棋手与韩国棋迷一同参加第29届“三星杯世界围棋大师赛”的抽签仪式。（韩国棋院提供）</figcaption></figure>
 <p>赛事赛程安排得非常紧凑，一气呵成。从12日的32强赛至22日决出冠军，每天都有棋赛，让棋迷们大饱眼福。</p>
 <p>12日、13日：32强赛<br />
 14日、15日：16强赛<br />
@@ -17,7 +16,7 @@
 18日、19日：半决赛<br />
 20日—22日：三番棋决赛</p>
 <p>11月11日举行开幕式，台、韩、日三国围棋第一人许皓鋐、申真谞、一力辽到场参加首轮抽签仪式，本着同国棋手避免交战的原则，具体对阵为：</p>
-<figure id="attachment_14369318" aria-describedby="caption-attachment-14369318" style="width: 602px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369318-79e9a4d3bf8bf5ec564a4a9f55af4790.jpg"><img decoding="async" class=" wp-image-14369318" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369318-79e9a4d3bf8bf5ec564a4a9f55af4790.jpg" alt="" width="602" b="130" /></a><figcaption id="caption-attachment-14369318" class="wp-caption-text">第29届“三星火灾杯世界围棋大师赛”首轮对阵。（大纪元制图）</figcaption></figure>
+<figure id="attachment_14369318" aria-describedby="caption-attachment-14369318" style="width: 602px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369318-79e9a4d3bf8bf5ec564a4a9f55af4790.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14369318" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369318-79e9a4d3bf8bf5ec564a4a9f55af4790.jpg" alt="" width="602" b="130"></a><figcaption id="caption-attachment-14369318" class="wp-caption-text">第29届“三星火灾杯世界围棋大师赛”首轮对阵。（大纪元制图）</figcaption></figure>
 <p>? 许皓鋐（台）VS（中）许嘉阳<br />
 ? 申真谞（韩）VS（中）王星昊<br />
 ? 安正己（韩）VS（中）陈正勋<br />
@@ -35,39 +34,40 @@
 ? 芝野虎丸（日）VS（中）檀啸<br />
 ? 彭沙康（泰）VS（中）范胤</p>
 <p>有趣的是，申真谞VS王星昊，卞相壹VS柯洁，正是明年初“南洋杯”和“LG杯”决赛的对阵，俨然为这两项世界大赛的提前彩排。</p>
-<figure id="attachment_14369321" aria-describedby="caption-attachment-14369321" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369321-465857528_966907955480896_9042657312127947325_n.jpg"><img decoding="async" class=" wp-image-14369321" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369321-465857528_966907955480896_9042657312127947325_n.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14369321" class="wp-caption-text">许皓鋐抽到4号签，对阵中国大陆棋手许嘉阳。受访时他谈到：“这几年网络上经常与中、日、韩棋手切磋，对台湾棋手帮助很大。我希望能在12日的比赛中下出精彩的内容。”（海峰棋院提供）</figcaption></figure>
-<figure id="attachment_14369320" aria-describedby="caption-attachment-14369320" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369320-466373932_966908055480886_3320704947708305621_n.jpg"><img decoding="async" class=" wp-image-14369320" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369320-466373932_966908055480886_3320704947708305621_n.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14369320" class="wp-caption-text">申真谞抽到6号签，对阵中国大陆棋手王星昊。受访时他表示：“为了三星杯，我做了很多准备，希望能取得好成绩。这次比赛来了很多中国大陆棋手，我很想击败他们。但我对首轮的抽签结果不太满意，不过我会全力以赴。”（海峰棋院提供）</figcaption></figure>
+<figure id="attachment_14369321" aria-describedby="caption-attachment-14369321" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369321-465857528_966907955480896_9042657312127947325_n.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14369321" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369321-465857528_966907955480896_9042657312127947325_n.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14369321" class="wp-caption-text">许皓鋐抽到4号签，对阵中国大陆棋手许嘉阳。受访时他谈到：“这几年网络上经常与中、日、韩棋手切磋，对台湾棋手帮助很大。我希望能在12日的比赛中下出精彩的内容。”（海峰棋院提供）</figcaption></figure>
+<figure id="attachment_14369320" aria-describedby="caption-attachment-14369320" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369320-466373932_966908055480886_3320704947708305621_n.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14369320" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369320-466373932_966908055480886_3320704947708305621_n.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14369320" class="wp-caption-text">申真谞抽到6号签，对阵中国大陆棋手王星昊。受访时他表示：“为了三星杯，我做了很多准备，希望能取得好成绩。这次比赛来了很多中国大陆棋手，我很想击败他们。但我对首轮的抽签结果不太满意，不过我会全力以赴。”（海峰棋院提供）</figcaption></figure>
 <p>在此前已举行的28届赛事中，韩国棋手14次折桂，中国大陆棋手12次夺魁，日本棋手2次问鼎，台湾棋手尚未取得零的突破。</p>
-<figure id="attachment_14369319" aria-describedby="caption-attachment-14369319" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369319-f23bbdac7b3a6c9d500ca0422dff3175.jpg"><img decoding="async" class=" wp-image-14369319" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369319-f23bbdac7b3a6c9d500ca0422dff3175.jpg" alt="" width="600" b="832" /></a><figcaption id="caption-attachment-14369319" class="wp-caption-text">“三星杯世界围棋大师赛”历届冠亚军。（大纪元制图）</figcaption></figure>
+<figure id="attachment_14369319" aria-describedby="caption-attachment-14369319" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/11/id14369319-f23bbdac7b3a6c9d500ca0422dff3175.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14369319" src="https://i.epochtimes.com/assets/uploads/2024/11/id14369319-f23bbdac7b3a6c9d500ca0422dff3175.jpg" alt="" width="600" b="832"></a><figcaption id="caption-attachment-14369319" class="wp-caption-text">“三星杯世界围棋大师赛”历届冠亚军。（大纪元制图）</figcaption></figure>
 <p>“三星杯”是由韩国棋院、韩国《中央日报》主办，韩国三星火灾海上保险株式会社赞助。采用韩国棋院规则，黑棋贴6.5目，每方基本用时为2小时，1分钟读秒5次。该项赛事的冠军奖金为3亿韩元（约合21.42万美元），亚军奖金为1亿韩元（约合7.14万美元）。</p>
 <p>责任编辑：李熔石</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/21/n14121367.md#1">三星杯8强战：意外！连笑超时负朴廷桓</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/22/n14122010.md#1">三星杯8强战：申真谞爆冷不敌谢尔豪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/24/n14123503.md#1">三星杯：丁浩力克朴廷桓 与谢尔豪争冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/29/n14126597.md#1">三星杯围棋赛：丁浩2比1险胜谢尔豪夺魁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/18/n11196004.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(1)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/23/n11134725.md#1" target="_blank">共产暴政录：东南亚排华的重要根源是共产党</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/10/11/n4547562.md#1" target="_blank">我们告诉未来：封锁与反封锁</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535826.md#1">【未解之谜】灵界能力觉醒 美国女子看到幽灵与彩色光环</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540208.md#1">【佳音时刻】养老金审计乱象 山西公务员22岁退休</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540523.md#1">【时事金扫描】抹黑美军行动 女记者被川普点名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540235.md#1">【纪元焦点】北京传“秋天有变” 习气数尽了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14538949.md#1">敏感时刻 北京城传出政治暗语：秋天有变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538818.md#1">豆腐渣工程频现 施工人员揭云南高速路黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538823.md#1">成本过亿 小沈阳新片上映3天票房仅7.6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538624.md#1">《名侦探柯南 独眼的残像》影评：毛利小五郎大出风头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539072.md#1">《F1电影》制作成本高 全球首映票房预测出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538690.md#1">7种过期调味品千万别吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538188.md#1">夏天在花园里用这一物 可赶走恼人的蚊子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536578.md#1">心血管最爱运动——循环系统伸展操</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539087.md#1">专家：避免用三种痛苦的方式伤害伴侣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539794.md#1">丰田销量连三月创新高 美日中市场需求强劲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/12/n14369263.htm">台韩日围棋第一人齐聚 三星杯首轮对阵出炉</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369263.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
